# pagure-cli

./: README.md  pagure-cli.cabal  stack.yaml
src/: Main.hs
src/Pagure/: Command.hs
src/Pagure/Command/: GitTags.hs  Issue.hs  Issues.hs  Tags.hs  User.hs  Users.hs  Version.hs
src/Pagure/Utility/: Git.hs
